--- a/reference/1.0.0/CoPilotAPI/CoPilotAPI.yaml
+++ b/reference/1.0.0/CoPilotAPI/CoPilotAPI.yaml
@@ -1751,13 +1751,14 @@ components:
           $ref: '#/components/schemas/amexProgramCodes'
     amexProgramCodes:
       x-model-version: 1.0
-      properties:
-        code:
-          type: string
-          description: The associated code
-        name:
-          type: string
-          description: The code name
+      items:
+        properties:
+          code:
+            type: string
+            description: The associated code
+          name:
+            type: string
+            description: The code name
       example: 
         - code: OPTBLUE
           name: American Express(AMEX) OptBlue
